--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,18 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
   --font-sans: var(--font-NewEdge666-Ultra-Bold-Rounded);
+  --font-light: var(--font-NewEdge666-Ultra-Light-Rounded);
+  --font-haas: var(--font-neueHaas);
+  --font-monument: var(--font-monument);
   --font-mono: var(--font-geist-mono);
   --font-serif: var(--font-Times-Newer-Roman);
   --font-serif-italic: var(--font-Times-Newer-Roman-Italic);
   --font-serif-bold: var(--font-Times-Newer-Roman-Bold);
+
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -47,7 +52,7 @@
 }
 
 :root {
-  --radius: 0.625rem;
+  --radius: 0rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -121,7 +126,5 @@
   }
   body {
     @apply bg-background text-foreground;
-
-    overflow: hidden;
   }
 }
